--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/customer.html
@@ -126,80 +126,441 @@
     <div class="cards">
 
         <div class="cards__item">
-            <div class="cards__item--like"></div>
-            <div class="picture">
 
-                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0000011_adilette-slides_280648_side-lateral-center-view.jpeg"
-                    alt="" />
-                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0000012_adilette-slides_280648_top-portrait-view.jpeg"
-                    alt="" />
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
             </div>
             <div class="color">
                 <div class="color--item"></div>
                 <div class="color--item"></div>
             </div>
             <div class="description">
-                <p></p>
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
             </div>
         </div>
+        <div class="cards__item">
 
-        <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
         <div class="cards__item">
-            <div></div>
-            <div></div>
-            <div></div>
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
+        </div>
+        <div class="cards__item">
+
+            <div class="picture">
+                <i class="far fa-heart"></i>
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095730_ultraboost-22-shoes_gx5462_side-lateral-center-view.jpeg"
+                    alt="Card Back">
+
+                <img src="https://st-adidas-isr.mncdn.com/content/images/thumbs/0095732_ultraboost-22-shoes_gx5462_top-portrait-view.jpeg"
+                    class="img-top" alt="Card Front">
+            </div>
+            <div class="color">
+                <div class="color--item"></div>
+                <div class="color--item"></div>
+            </div>
+            <div class="description">
+                <p>4DFWD Pulse Shoes</p>
+                <p>Men's Running</p>
+                <p>₪ 299.90</p>
+            </div>
         </div>
     </div>
+    <div class="footer">
+        <div class="footer__top">
+            <h4>JOIN OUR CREATORS CLUB & GET 15% OFF</h4>
+            <button>
+                <p>SIGN UP FOR FREE</p>
+                <i class="fas fa-arrow-right"></i>
+            </button>
+        </div>
+        <div class="footer__container">
 
+        </div>
+        <div class="footer__lower">
+
+        </div>
+    </div>
     <div id="rootCart"></div>
     <div id="wishList"></div>
 
