--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/owner.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Room2/owner.html
@@ -30,6 +30,6 @@
         <div id="root"></div>
     </div>
 
-    <script src="dist/index.js"></script>
+    <script src="dist/owner.js"></script>
 </body>
 </html>
