--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/index.html
@@ -209,7 +209,9 @@
                         <div>Maki Sushi</div>
                     </div>
 
-                    <div class="popmenu__box__grid" id="root"></div>
+                    <div class="popmenu__box__grid" id="rootStore">
+
+                    </div>
 
                 </div>
 
