--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/yahia,michael,leon/customer.html
@@ -40,17 +40,16 @@
 </div>
 <div class="_main_cta_boxes">
 <div class="box1"><button name="shoes" id="shoes" value="Nike air jordan 130$" onclick="handleCart(event)">Shop FlyEase</button> </div>
-    <div class="box1">Shop Kids</div>
+    <div class="box1"><button id="hoodie" name="hoodie" value="hoodie" onclick="handlehoodie(event)">Hoodies</button> </div>
     <div class="box2"><i class="fas fa-shopping-cart"> </i></div>
 </div>
 <select name="" id="" onchange='handleSelect(event)'>
     <option value="" disabled selected>Choose a type</option>
     <option value="all">Show all</option>
     <option value="shoes">Shoes</option>
-    <option value="pants">pants</option>
     <option value="hoodie">Hoodie</option>
 </select>
-<div id="root"></div>
+<div id="root1"></div>
 
 <script src="dist/index.js"></script>
 </body>
