--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Or_Jenia_Misha/erp.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>FU-Sushi ERP</title>
+    <link rel="stylesheet" href="dist/style.css">
 </head>
 
 <body>
     <a href="./index.html">Store</a>
     <a href="./erp.html">ERP</a>
+    
     <form onsubmit="handleAddDish(event)">
         <input type="text" name="name" id="" placeholder="Dish Name">
         <input type="number" name="price" id="" placeholder="Dish Price">
