--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Marina Rasheed Shani/rasheed-gucci-/index.html
@@ -115,7 +115,7 @@
         </div>
 
         
-        <div class="container__children hide dropdown" id='children-dropdwon'>
+        <div class="container__children hide dropdown" id='children-dropdown'>
             <div class="baby">
                 <h5>BABY (0-36 month)</h5>
                 <p>View all</p>
