--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/chaim , michael ido/customer.html
@@ -26,7 +26,7 @@
                <button class="container_header_menu-btn" onclick="showOrders()"><i class="fas fa-truck-loading fa-2x" ></i><p class="btnDiscription">Your orders</p></button>
                <button class="container_header_menu-btn" onclick="displayCart()"><i class="fas fa-shopping-cart fa-2x" ></i><p class="btnDiscription">Shopping cart</p></button>
              </div>
-             <div class="container_header-dropDown">
+             <!-- <div class="container_header-dropDown">
                  <div style="background-color: gray; " id="notifications" class="container_header-dropDown-box">
                     <p style="font-size: 12px">no notifications found</p>
                  </div>
@@ -38,7 +38,7 @@
                  <div id="ShoppingCart" class="container_header-dropDown-box">
                      <div class="container_header-dropDown-box-item"></div>
                  </div>
-             </div>             
+             </div>              -->
          </div>
          <div class="container-imgsBox" id="ImgsBox"></div>
 
