--- a/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
+++ b/02-JavaScript/09-formsAndObjects/03-Gucci-Project/Etan Omri John 2/Bookie.html
@@ -195,22 +195,22 @@
             Back to top
         </button>
         <footer>
-            <nav class="secondaryNav">
-                <div data-1 class="secondaryNav__locator">
-                    <span>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20">
-                            <symbol viewBox="0 0 14 20" id="a">
-                                <path
-                                    d="M7 10.8c-1.7 0-3-1.4-3-3.2 0-1.8 1.3-3.2 3-3.2s3 1.4 3 3.2c0 1.8-1.3 3.2-3 3.2m7-3.2C14 3.4 10.9 0 7 0S0 3.4 0 7.6c0 2.1.8 4 2.1 5.4l5 7 5-7c1.1-1.4 1.9-3.3 1.9-5.4"
-                                    fill="currentColor" />
-                            </symbol>
-                            <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#a" />
-                        </svg>
-                    </span>
-                    STORE LOCATOR
-                    <i class="fas fa-plus"></i>
-                </div>
-                <div data-3 class="secondaryNav__services">
+            <div data-1 class="secondaryNav__locator">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20">
+                        <symbol viewBox="0 0 14 20" id="a">
+                            <path
+                                d="M7 10.8c-1.7 0-3-1.4-3-3.2 0-1.8 1.3-3.2 3-3.2s3 1.4 3 3.2c0 1.8-1.3 3.2-3 3.2m7-3.2C14 3.4 10.9 0 7 0S0 3.4 0 7.6c0 2.1.8 4 2.1 5.4l5 7 5-7c1.1-1.4 1.9-3.3 1.9-5.4"
+                                fill="currentColor" />
+                        </symbol>
+                        <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#a" />
+                    </svg>
+                STORE LOCATOR
+
+                <div><span><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 14 20"><symbol viewBox="0 0 14 20" id="svg-icon-location"><title>location</title> <g fill="currentColor"> <path d="M7,10.8c-1.7,0-3-1.4-3-3.2c0-1.8,1.3-3.2,3-3.2c1.7,0,3,1.4,3,3.2C10,9.4,8.7,10.8,7,10.8 M14,7.6&#10;&#9;&#9;&#9;C14,3.4,10.9,0,7,0S0,3.4,0,7.6c0,2.1,0.8,4,2.1,5.4l0,0l5,7l5-7l0,0C13.2,11.6,14,9.7,14,7.6"/> </g> </symbol><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-icon-location"/></svg></span><input type="text"><img src="./SVG/arrowBigScreen.svg"></div>
+                <i class="fas fa-plus"></i>
+            </div>
+            <nav data-2 class="secondaryNav">
+                <div class="secondaryNav__services">
                     <svg width="409.201" height="363.288" version="1.1" viewBox="0 0 409.201 363.288"
                         xmlns="http://www.w3.org/2000/svg">
                         <g transform="translate(.500856 .50042)">
@@ -227,8 +227,8 @@
                         </g>
                     </svg> Gucci Services
                 </div>
-                <div data-2 class="secondaryNav__ostria">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <div class="secondaryNav__ostria">
+                    <span><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 463.002 463.002"
                         style="enable-background:new 0 0 463.002 463.002;" xml:space="preserve">
                         <g>
@@ -296,10 +296,10 @@
                         <g>
                         </g>
                         <g></g>
-                    </svg>
+                    </svg></span>
                     Gucci Osteria Beverly Hills da Massimo Bottura
                 </div>
-                <div data-2 class="secondaryNav__appointment"><svg width="409.201" height="363.288" version="1.1"
+                <div class="secondaryNav__appointment"><svg width="409.201" height="363.288" version="1.1"
                         viewBox="0 0 409.201 363.288" xmlns="http://www.w3.org/2000/svg">
                         <g transform="translate(.500856 .50042)">
                             <a>
@@ -318,13 +318,40 @@
                 </div>
             </nav>
 
-            <nav class="secondaryNav">
-                <ul data-4 class="secondaryNav__help">NEED HELP? <i class="fas fa-plus"></i></ul>
-                <ul data-5 class="secondaryNav__about">THE COMPANY <i class="fas fa-plus"></i></ul>
-                <ul data-6 class="secondaryNav__social">FIND US ON <i class="fas fa-plus"></i></ul>
-                <ul data-7 class="secondaryNav__signUp">SIGN UP FOR GUCCI UPDATES <i class="fas fa-plus"></i></ul>
+            <nav data-4 class="secondaryNav">
+                <ul class="secondaryNav__help"><p>NEED HELP?</p>
+                    <li>Contact Us</li>
+                    <li>Shipping Services</li>
+                    <li>Payment Options</li>
+                    <li>Returns & Exchanges</li>
+                    <li>Product Care</li>
+                    <li>FAQs</li>
+                    <li>Unsubscribe</li>
+                    <li>Sitemap</li>
+                    <i class="fas fa-plus"></i></ul>
+                <ul class="secondaryNav__about"><p>THE COMPANY</p> 
+                    <li>About Bookie</li>
+                    <li>Bookie Equilibrium</li>
+                    <li>Code of Ethics</li>
+                    <li>Bookie Garden</li>
+                    <li>Careeres</li>
+                    <li>Legal</li>
+                    <li>Privacy & Cookies</li>
+                    <li>Corporate Information</li>
+                    <i class="fas fa-plus"></i></ul>
+                <ul class="secondaryNav__social"><p>FIND US ON </p>
+                    <li>FaceBook</li>
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>Instagram Nerdy</li>
+                    <li>YouTube</li>
+                    <li>Bookie Podcast</li>
+                    <li>Pinterest</li>
+                    <li>Snapchat</li>
+                    <i class="fas fa-plus"></i></ul>
             </nav>
-            <ul data-8 class="footer__svgs">
+            <ul data-5 class="secondaryNav__signUp">SIGN UP FOR GUCCI UPDATES <i class="fas fa-plus"></i></ul>
+            <ul data-6 class="footer__svgs">
                 <div class="footer__svgs-equilibrium">
                     <span>
 
@@ -408,10 +435,10 @@
                     </span>
                 </div>
             </ul>
-            <p data-9 class="footer__credit">
+            <p data-7 class="footer__credit">
                 © 2016 - 2020 Guccio Gucci S.p.A. - All rights reserved. SIAE LICENCE # 2294/I/1936 and 5647/I/1936
             </p>
-            <div data-div></div>
+            <div data-3></div>
         </footer>
     </div>
     <!--Etan-->
